--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@yieldstudio/eslint-config",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Yield Studio Javascript shared configs",
   "homepage": "https://github.com/YieldStudio/eslint-config",
   "license": "MIT",
@@ -49,12 +49,12 @@
     "eslint-plugin-prettier": "^4.2.1"
   },
   "peerDependencies": {
-    "eslint": "8.32.0",
-    "prettier": "^2.8.3",
-    "typescript": "4.9.4"
+    "eslint": "^8.0.0",
+    "prettier": "^2.8.0",
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
-    "eslint": "^8.32.0",
-    "prettier": "^2.8.3"
+    "eslint": "^8.0.0",
+    "prettier": "^2.8.0"
   }
 }
